<resources>
    <string name="app_name">DINCI</string>

    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="Repass">Confirmar Contraseña</string>
    <string name="phone">Celular</string>
    <string name="registrarme">Registrarme</string>
    <string name="cuenta">Crear Cuenta</string>
    <string name="MensajeCuenta">¿Ya eres Usuario?...Inicia Sesion</string>
    <string name="login">Iniciar Sesion</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Noticias</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_incidentes">Incidentes</string>
    <string name="title_perfil">Perfil</string>


    <string name="tipo">Tipo:</string>
    <string name="lugar">Lugar:</string>
    <string name="descripcion">Descripción:</string>
    <string name="foto">Foto</string>

    <string name="estado">Estado:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
